--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_banner.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_banner.scss
@@ -1,13 +1,29 @@
 .banner{
+	@extend .row;
+	width: 100%;
 	position: relative;
 	display: block;
-	width: 100%;
 	background: $banner-background-color;
-	font-family: $sansFontFamilyLight;
-	*{
+	.entry-title{
+  	font-family: $sansFontFamilyLight;
 		color: $banner-font-color;
+		position: absolute;
+		z-index: 1200;
 	}
 }
+
+.main .banner{
+	margin: -($topbar-height) 0 0 0;	
+}
+
+.portrait{
+	width: 100%;
+	margin: 0;
+	img{
+		width: 100%;
+	}
+}
+
 .banner-content{
 	width: 100%;
 	position: relative;
@@ -17,8 +33,17 @@
 
 @media #{$small}{
 }
+@media #{$topbar-media-query} {
+	.main .banner{
+		margin-top: -($large-topbar-height);
+		margin-top: -($medium-topbar-height);
+	}
+}
 @media #{$medium}{
 }
-@media #{$large}{
+@media #{$large}{	
+	.main .banner{
+		margin-top: -($large-topbar-height);
+	}
 }
 
