--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
@@ -8,21 +8,21 @@
   border: none;
   display: block;
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 5px;
-  width: 75px;
+  width: $topbar-height / 0.35;
   height: $topbar-height;
   background-image: $logo;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 .no-svg {
-	.brand{
-		top: -5px;
-		background: $logo-fallback no-repeat;
-	}
+  .brand{
+    top: -5px;
+    background: $logo-fallback no-repeat;
+  }
 }
 
 .menu-access{
-	@extend .toggle-topbar;
+  @extend .toggle-topbar;
 }
