--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-mq.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-mq.scss
@@ -25,9 +25,7 @@
 		height: $medium-topbar-height;
 	}
 	.brand{
-  	top: 5px;
-  	left: 5px;
-	  width: 105px;
+    width: $medium-topbar-height/ 0.35;
 	  height: $medium-topbar-height - 5px;
 	  background-image: $logo;
 	  background-repeat: no-repeat;
@@ -49,9 +47,8 @@
 	.top-bar{
 		height: $large-topbar-height;
 	}
-	.brand{
-	  width: 145px;
-	  height: 120px;
-		height: $large-topbar-height - 5px;
+  .brand{
+    width: $large-topbar-height / 0.35;
+    height: $large-topbar-height - 5px;
   }
 }
