--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
@@ -10,8 +10,8 @@
   position: absolute;
   top: 5px;
   left: 5px;
-  width: $topbar-height / 0.35;
-  height: $topbar-height;
+  height: $logo-topbar-height;
+  width: $logo-topbar-width;
   background-image: $logo;
   background-repeat: no-repeat;
   background-size: 100%;
