--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
@@ -42,6 +42,17 @@ aside.side-info {
 			clear: left;
 		}
 	}
+	.nav-entry{
+		position: fixed;
+		top: 45%;
+		width: 100%;
+		a{
+			position: absolute;
+			&:nth-child(2){
+				right: 0;
+			}		
+		}
+	}
 }
 
 @media #{$small} {
