--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
@@ -5,6 +5,7 @@
 @import "custom/layout";
 @import "custom/type";
 @import "custom/icons";
+@import "custom/top-bar";
 @import "custom/header-default";
 @import "custom/header-mq";
 @import "custom/footer-default";
