--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_header-default.scss
@@ -7,18 +7,20 @@
 	@extend .hide-text;
   border: none;
   display: block;
-  position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 0.25em;
+  left: 0.2em;
   height: $logo-topbar-height;
   width: $logo-topbar-width;
   background-image: $logo;
   background-repeat: no-repeat;
   background-size: 100%;
+  opacity: 0.7;
+  &:hover{
+    opacity: 1;    
+  }
 }
 .no-svg {
   .brand{
-    top: -5px;
     background: $logo-fallback no-repeat;
   }
 }
