--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -1,13 +1,24 @@
-
-.nav-entry{
-
-}
 .entry-title{
 	position: absolute;
-	font-size: 10em;
+	font-size: 2em;
 	text-transform: uppercase;
 	bottom: 10%;
 	width: 100%;
+	padding: 0 1em;
+	font-family: $sansFontFamilyLight;
+	color: $banner-font-color;
+	position: absolute;
+}
+
+.prev-next-link {
+	@extend a;
+	@extend .button;
+	border: none;
+	font-family: $sansFontFamilyLight;
+	opacity: 0.5;
+	&:hover{
+		opacity: 1;
+	}
 }
 
 @media screen and (min-width: 600px){
@@ -21,5 +32,31 @@
 				right: 0;
 			}		
 		}
+	}
+	.entry-title{
+		font-size: 3em;
+		bottom: 5%;
+	}	
+}
+
+
+@media #{$small}{
+	.entry-title{
+		font-size: 4em;
+	}
+}
+@media #{$topbar-media-query} {
+	.entry-title{
+		font-size: 6em;
+	}
+}
+@media #{$medium}{
+	.entry-title{
+		font-size: 8em;
+	}
+}
+@media #{$large}{
+	.entry-title{
+		font-size: 10em;
 	}
 }
