--- a/wp/wp-content/themes/leprojo-2013/assets/scss/foundation/components/_top-bar.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/foundation/components/_top-bar.scss
@@ -66,7 +66,7 @@ $topbar-sticky-class: ".sticky" !default;
   /* Wrapped around .top-bar to contain to grid width */
   .contain-to-grid {
     width: 100%;
-    background: $topbar-bg;
+    // background: $topbar-bg;
 
     .top-bar { margin-bottom: $topbar-margin-bottom; }
   }
