--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
@@ -52,7 +52,7 @@ $em-base: 16 !default;
 
 $default-float: left;
 
-$body-bg: $grayLighter;
+$body-bg: $white;
 $body-font-color: $grayDark;
 $body-font-family: $serifFontFamily;
 // $body-font-weight: normal;
@@ -117,7 +117,7 @@ $success-color: #5da423;
 
 // $small-screen: 768px;
 // $medium-screen: 1280px;
-// $large-screen: 1440px;
+$large-screen: 1440px;
 
 // $screen: "only screen";
 // $small: "only screen and (min-width: #{$small-screen})";
@@ -164,7 +164,7 @@ $row-width: 100%;
 
 $header-font-family: $sansFontFamily;
 $header-font-weight: normal;
-// $header-font-style: normal;
+$header-font-style: normal;
 $header-font-color: $secondary-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
