Interview is going well !

--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
@@ -213,9 +213,9 @@ $paragraph-line-height: 1.6;
 
 // Style anchors
 
-// $anchor-text-decoration: thin-dotted;
-$anchor-font-color: $primary-color;
-$anchor-font-color-hover: darken($primary-color, 10%);
+$anchor-text-decoration: dotted;
+$anchor-font-color: lighten($purple, 30%);
+$anchor-font-color-hover: darken($anchor-font-color, 30%);
 
 // Style the <hr> element
 
