--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_effects-mixins.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_effects-mixins.scss
@@ -97,7 +97,8 @@
 		top: $top;
 		left: 50%;
 		color: transparent;
-		content: '•';
+		// content: '•';
+		content: '\2022';
 		text-shadow: 0 0 transparent;
 		font-size: 1.2em;
 		-webkit-transition: text-shadow $timing, color $timing;
