links and menu are fine

--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_custom-variables.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_custom-variables.scss
@@ -47,7 +47,9 @@ $textColor:             $grayDark !default;
 
 /*==========  components  ==========*/
 
-$highlightColor: $blue;
+$highlightColor: $purple;
+$menu-bg-Color: $white;
+$menu-highlight-bg-Color: $grayDark;
 
 // banner
 $banner-background-color: none;
