--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_type.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_type.scss
@@ -161,6 +161,11 @@ i{
   font-weight: bold;
 }
 
+.asker{
+  font-style: normal;
+  font-weight: normal;
+}
+
 .date{
   @extend small;
   font-style: italic;
