--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_settings.scss
@@ -235,10 +235,11 @@ $anchor-font-color-hover: darken($anchor-font-color, 30%);
 
 // Style blockquotes
 
-// $blockquote-font-color: lighten($header-font-color, 30%);
-// $blockquote-padding: emCalc(9, 20, 0, 19);
-// $blockquote-border: 1px solid #ddd;
-// $blockquote-cite-font-size: emCalc(13);
+$blockquote-font-color: lighten($header-font-color, 30%);
+$blockquote-border-color: lighten($header-font-color, 50%);
+$blockquote-padding: emCalc(9, 20, 9, 19);
+$blockquote-border: 3px solid $blockquote-border-color;
+$blockquote-cite-font-size: emCalc(24);
 // $blockquote-cite-font-color: lighten($header-font-color, 20%);
 // $blockquote-cite-link-color: $blockquote-cite-font-color;
 
