--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -27,6 +27,24 @@
 	}
 }
 
+.image-itw{
+	
+	margin-bottom: 2em;
+
+	img{
+		width: 100%;
+	}
+	figcaption{
+		font-family: $sansFontFamilyLight;
+		text-align: center;
+		font-size: 1.5em;
+		line-height: 2em;
+		margin: 1em 0;
+		border-top: 1px solid $gray;
+		border-bottom: 1px solid $gray;
+	}
+}
+
 @media screen and (min-width: 600px){
 	.nav-entry{
 		position: fixed;
