--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_type.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_type.scss
@@ -3,6 +3,15 @@
   font-size: em-calc(18);
 }
 
+blockquote{
+  margin-top: 1em;
+  p{
+    margin-bottom: 0;
+    font-size: $blockquote-cite-font-size;
+  }
+}
+
+
 @media #{$small} {  
   p {
     font-size: 1.25em;
@@ -159,6 +168,11 @@ i{
 .question{  
   font-style: italic;
   font-weight: bold;
+  margin-bottom: 0.75em;
+}
+
+.answer{
+  margin-bottom: 2.5em;
 }
 
 .asker{
