--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
@@ -6,7 +6,8 @@
 
 // Foundation Components
 @import "foundation/components/global";
-@import "foundation/components/grid";
+@import "foundation/components/grid-5";
+// @import "foundation/components/grid";
 @import "foundation/components/visibility";
 @import "foundation/components/block-grid";
 @import "foundation/components/type";
