--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_icons.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_icons.scss
@@ -89,9 +89,11 @@ but it's slower:
 }
 .icon-twitter:before {
 	content: "\e00b";
+	margin-right: 0.4em;
 }
 .icon-facebook:before {
 	content: "\e00c";
+	margin-right: 0.3em;
 }
 .icon-soundcloud:before {
 	content: "\e00d";
